# decrescendo

./: .gitignore  pyproject.toml
configs/: config.yaml
configs/model/: roberta_base.yaml
configs/training/: default.yaml
docs/: Architecture.md  CLASSIFIER_TASKS.md  PRD.md  TASKS.md
scripts/: create_test_checkpoints.py  train.py  train_audio.py
src/decrescendo/: __init__.py
src/decrescendo/constitutional_audio/: __init__.py  api.py  cli.py
src/decrescendo/constitutional_audio/data/: __init__.py  audio_dataset.py  dataset.py
src/decrescendo/constitutional_audio/input_classifier/: config.py  inference.py  model.py
src/decrescendo/constitutional_audio/output_classifier/: config.py  inference.py  voice_database.py
src/decrescendo/musicritic/: __init__.py  api.py  cli.py  pipeline.py
tests/: __init__.py  conftest.py  test_audio_dataset.py  test_audio_losses.py  test_audio_training.py  test_checkpointing.py  test_cli.py  test_data.py  test_dimensions_base.py  test_model.py  test_output_classifier.py  test_pipeline.py  test_voice_database.py
tests/test_audio_quality/: __init__.py  conftest.py  test_artifacts.py  test_config.py  test_evaluator.py  test_loudness.py  test_perceptual.py
tests/test_copyright/: __init__.py  conftest.py  test_evaluator.py  test_fingerprint.py  test_similarity.py
tests/test_musical_coherence/: __init__.py  conftest.py  test_evaluator.py  test_harmony.py  test_melody.py  test_rhythm.py  test_structure.py
tests/test_musicality/: __init__.py  conftest.py  test_config.py  test_evaluator.py  test_expression.py  test_tension.py  test_tis.py
tests/test_prompt_adherence/: __init__.py  conftest.py  test_clap_encoder.py  test_config.py  test_evaluator.py
(+58 files in other folders)
