[project]
name = "decrescendo"
version = "0.1.0"
description = "Constitutional Audio and MusiCritic - AI safety and evaluation for audio"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "Jai Dhiman"}
]

dependencies = [
    # JAX ecosystem
    "jax>=0.4.30",
    "jaxlib>=0.4.30",

    # Flax and Optax
    "flax>=0.8.0",
    "optax>=0.2.0",

    # Checkpointing
    "orbax-checkpoint>=0.5.0",

    # HuggingFace (tokenizers and pretrained weights)
    "transformers>=4.40.0",
    "tokenizers>=0.19.0",
    "datasets>=2.18.0",

    # Audio processing
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "scipy>=1.11.0",

    # Configuration
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",

    # Utilities
    "numpy>=1.26.0",
    "tqdm>=4.66.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
cuda = [
    "jax[cuda12]>=0.4.30",
]

dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "pre-commit>=3.6.0",
]

wandb = [
    "wandb>=0.16.0",
]

serve = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.6",
]

[project.scripts]
constitutional-audio = "decrescendo.constitutional_audio.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/decrescendo"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
